--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,48 @@
-[env:esp32cam]
+# ------------------------------------------------
+# platformio.ini — два профиля (debug/release)
+# ------------------------------------------------
+[platformio]
+default_envs = esp32cam-debug
+
+
+[env]
 platform = espressif32
-board = esp32cam
+board = esp32cam ; AI Thinker ESP32-CAM
 framework = arduino
 monitor_speed = 115200
-board_build.partitions = huge_app.csv
-build_flags = 
-  -DBOARD_HAS_PSRAM
-  -mfix-esp32-psram-cache-issue
+monitor_filters =
+esp32_exception_decoder
+time
+build_unflags = -Os
+lib_deps =
+; сюда можно добавлять библиотеки по мере надобности
+; к примеру, библиотека журнала или математика
+
+
+board_build.partitions = huge_app.csv ; стандартный расширенный раздел (входит в пакет платформы)
+
+
+; Общие флаги для всех профилей
+build_flags =
+-D ARDUINO_USB_MODE=0
+-D BOARD_HAS_PSRAM
+-mfix-esp32-psram-cache-issue
+-D CORE_DEBUG_LEVEL=1 ; 0–5
+; -D USE_ESP_FACE ; включить, если интегрируешь ESP-WHO/esp-face вручную
+
+
 upload_speed = 921600
+
+
+; Если нужен OTA, можно добавить профиль с upload_protocol = espota позже
+
+
+[env:esp32cam-debug]
+build_type = debug
+
+
+[env:esp32cam-release]
+build_type = release
+build_flags =
+${env.build_flags}
+-D NDEBUG
